# CLion

./: .gitignore  CLION_ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_GUIDE.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  STATUS_REPORT.md
include/clion/: common.h
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.h  interaction.cpp  interaction.h
src/compiler/: command_executor.cpp  command_executor.h  error_parser.cpp  error_parser.h
src/indexer/: code_index.cpp  code_index.h  project_scanner.cpp  project_scanner.h  prompt_analyzer.cpp  prompt_analyzer.h
src/llm/: context_builder.cpp  context_builder.h  llm_client.cpp  llm_client.h  session.cpp  session.h
src/utils/: diff_utils.cpp  diff_utils.h  file_utils.cpp  file_utils.h  rules_loader.cpp  rules_loader.h  token_counter.cpp  token_counter.h
tests/: CMakeLists.txt
